Fix scrollbar always displaying

--- a/frog-utils/src/ReactiveRichText/WikiLink/quill.mention.css
+++ b/frog-utils/src/ReactiveRichText/WikiLink/quill.mention.css
@@ -12,7 +12,7 @@
   list-style: none;
   margin: 0;
   padding: 5px 0;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .ql-mention-list-item {
